# wisehack2025

./: README.md
engine/: CMakeLists.txt
engine/src/: engine.cpp
tests/: source_1_memory.c  source_2_logic.c  source_3_balanced.c  wise_balanced  wise_logic  wise_memory
